# automata

./: README.rst  pyproject.toml  setup.py
src/: cell.py  grid.py  helper.py  naive_convolve.c  naive_convolve.pyx
