[tool.poetry]
name = "cellular_automata"
version = "0.1.0"
description = ""
authors = ["mwachala <berrybretch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
p5 = "^0.7.1"
numpy = "^1.19.2"
cython = "^0.29.21"
iPython = "^7.22.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
